--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,82 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-
-    
+  	<div class="wrapper">
+	  	<h1>Penrose</h1>
+	  	<p class="invoice-fao">
+	  		FAO: <span>Mr Joshua Bradley</span><br>
+	  		Flat 24, 84 Kingland Rd<br>
+	  		London E2 8DP
+	  	</p>
+	  	<p class="invoice-details">
+	  		VAT invoice #3333<br>
+			03 May 2014
+	  	</p>
+	  	<p class="contact-details">
+	  		<a href="mailto:contact@penrosestudio.com">contact@penrosestudio.com</a>
+	  		<a href="tel:+442072409580">0207 240 9580</a>
+	  	</p>
+	  	<table class="invoice-items">
+	  		<thead>
+	  			<tr>
+	  				<th>Item</th>
+	  				<th>Cost</th>
+	  			</tr>
+	  		</thead>
+	  		<tbody>
+	  			<tr>
+	  				<td>Line item</td>
+	  				<td>&pound;300</td>
+	  			</tr>
+	  			<tr>
+	  				<td>Line item</td>
+	  				<td>&pound;300</td>
+	  			</tr>
+	  			<tr>
+	  				<td>Line item</td>
+	  				<td>&pound;300</td>
+	  			</tr>
+	  			<tr>
+	  				<td>&nbsp;</td>
+	  				<td>&nbsp;</td>
+	  			</tr>
+	  			<tr>
+	  				<td>Subtotal</td>
+	  				<td>&pound;900</td>
+	  			</tr>
+	  			<tr>
+	  				<td>VAT 20%</td>
+	  				<td>&pound;180</td>
+	  			</tr>
+	  		</tbody>
+	  		<tfoot>
+	  			<tr>
+	  				<td>Total</td>
+	  				<td>&pound;1080</td>
+	  			</tr>
+	  		</tfoot>
+	  	</table>
+	  	<p class="payment-terms">Payment would be appreciated within 7 days of receipt of this invoice.</p>
+	  	<p class="invoice-thanks">
+	  		Many Thanks<br>
+	  		<span>The Penrose Team</span>
+	  	</p>
+	  	<p class="payment-details">
+	  		<h2>Payment Details</h2>
+	  		Please make payments by bank transfer to:<br>
+	  		HSBC, sort code 12-34-56, account number 12345678<br>
+	  		(International payments: iban GB12ABCD12345678909876, swift ABCDGB12)<br>
+	  		Please quote invoice number as the payment reference.<br>
+	  	</p>
+	  	<p class="company-details">
+	  		Penrose is a trading name of Penrose Studio Ltd.<br>
+	  		Registered office: 1 Parade Chambers, North Lane, Leeds, LS6 3HW, United Kingdom.
+	  	</p>
+	  	<p class="company-number">
+	  		<span>Company number: </span>06947690<br>
+	  		<span>Registered VAT number: </span>973 3258 01
+	  	</p>
+  	</div>
     <script src="javascripts/main.js"></script>
   </body>
 </html>
