completes styling of invoice

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 	  	<table class="invoice-items">
 	  		<thead>
 	  			<tr>
-	  				<th>Item</th>
+	  				<th class="item">Item</th>
 	  				<th>Cost</th>
 	  			</tr>
 	  		</thead>
@@ -61,24 +61,26 @@
 	  	</table>
 	  	<p class="payment-terms">Payment would be appreciated within 7 days of receipt of this invoice.</p>
 	  	<p class="invoice-thanks">
-	  		Many Thanks<br>
+	  		Many Thanks,<br>
 	  		<span>The Penrose Team</span>
 	  	</p>
-	  	<p class="payment-details">
+	  	<div class="details-block">
 	  		<h2>Payment Details</h2>
-	  		Please make payments by bank transfer to:<br>
-	  		HSBC, sort code 12-34-56, account number 12345678<br>
-	  		(International payments: iban GB12ABCD12345678909876, swift ABCDGB12)<br>
-	  		Please quote invoice number as the payment reference.<br>
-	  	</p>
-	  	<p class="company-details">
-	  		Penrose is a trading name of Penrose Studio Ltd.<br>
-	  		Registered office: 1 Parade Chambers, North Lane, Leeds, LS6 3HW, United Kingdom.
-	  	</p>
-	  	<p class="company-number">
-	  		<span>Company number: </span>06947690<br>
-	  		<span>Registered VAT number: </span>973 3258 01
-	  	</p>
+	  		<p class="payment-details">
+	  			Please make payments by bank transfer to:<br>
+	  			HSBC, sort code 12-34-56, account number 12345678<br>
+	  			International payments: iban GB12ABCD12345678909876, swift ABCDGB12<br>
+	  			Please quote invoice number as the payment reference.<br>
+	  		</p>
+	  		<p class="company-details">
+	  			Penrose is a trading name of Penrose Studio Ltd.<br>
+	  			Registered office: 1 Parade Chambers, North Lane,<br> Leeds, LS6 3HW, United Kingdom.
+	  		</p>
+	  		<p class="company-number">
+	  			<span>Company number: </span>06947690<br>
+	  			<span>Registered VAT number: </span>973 3258 01
+	  		</p>
+	  	</div>
   	</div>
     <script src="javascripts/main.js"></script>
   </body>
