minor tweaks to proportion, adds bg screen, enhances table behaviour

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
   	<div class="wrapper">
+  		<div class="background-screen"></div>
 	  	<h1>Penrose</h1>
 	  	<p class="invoice-fao">
 	  		FAO: <span>Mr Joshua Bradley</span><br>
@@ -28,7 +29,7 @@
 	  		</thead>
 	  		<tbody>
 	  			<tr>
-	  				<td>Line item</td>
+	  				<td>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</td>
 	  				<td>&pound;300</td>
 	  			</tr>
 	  			<tr>
@@ -81,6 +82,7 @@
 	  			<span>Registered VAT number: </span>973 3258 01
 	  		</p>
 	  	</div>
+	  	<div class="border-edge"></div>
   	</div>
     <script src="javascripts/main.js"></script>
   </body>
