--- a/src/document-cover.html
+++ b/src/document-cover.html
@@ -5,84 +5,49 @@
   </head>
   <body>
   	<div class="wrapper">
-  		<div class="background-screen"></div>
+  		<div class="cover-background-screen"></div>
 	  	<h1>Penrose</h1>
-	  	<p class="invoice-fao">
-	  		FAO: <span>Mr Joshua Bradley</span><br>
-	  		Flat 24, 84 Kingland Rd<br>
-	  		London E2 8DP
-	  	</p>
-	  	<p class="invoice-details">
-	  		VAT invoice #3333<br>
-			03 May 2014
-	  	</p>
-	  	<p class="contact-details">
-	  		<a href="mailto:contact@penrosestudio.com">contact@penrosestudio.com</a>
-	  		<a href="tel:+442072409580">0207 240 9580</a>
-	  	</p>
-	  	<table class="invoice-items">
+	  	<h2 class="cover-title">This is the title of the proposal</h2>
+	  	<p class="cover-subtitle">This is the subtitle of the proposal. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+	  	<div class="cover-row">
+	  		<p>This is a column of details on the cover. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+	  		<p>This is a column of details on the cover. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+	  		<p>This is a column of details on the cover. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+	  	</div>
+	  	<table class="cover-contents">
 	  		<thead>
 	  			<tr>
-	  				<th class="item">Item</th>
-	  				<th>Cost</th>
+	  				<th class="item">Contents</th>
+	  				<th></th>
 	  			</tr>
 	  		</thead>
 	  		<tbody>
 	  			<tr>
 	  				<td>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</td>
-	  				<td>&pound;300</td>
+	  				<td>2</td>
 	  			</tr>
 	  			<tr>
-	  				<td>Line item</td>
-	  				<td>&pound;300</td>
+	  				<td>ToC item</td>
+	  				<td>3</td>
 	  			</tr>
 	  			<tr>
-	  				<td>Line item</td>
-	  				<td>&pound;300</td>
+	  				<td>ToC item</td>
+	  				<td>5</td>
 	  			</tr>
 	  			<tr>
-	  				<td>&nbsp;</td>
-	  				<td>&nbsp;</td>
+	  				<td>ToC item</td>
+	  				<td>6</td>
 	  			</tr>
 	  			<tr>
-	  				<td>Subtotal</td>
-	  				<td>&pound;900</td>
+	  				<td>ToC item</td>
+	  				<td>10</td>
 	  			</tr>
 	  			<tr>
-	  				<td>VAT 20%</td>
-	  				<td>&pound;180</td>
+	  				<td>ToC item</td>
+	  				<td>12</td>
 	  			</tr>
 	  		</tbody>
-	  		<tfoot>
-	  			<tr>
-	  				<td>Total</td>
-	  				<td>&pound;1080</td>
-	  			</tr>
-	  		</tfoot>
 	  	</table>
-	  	<p class="payment-terms">Payment would be appreciated within 7 days of receipt of this invoice.</p>
-	  	<p class="invoice-thanks">
-	  		Many Thanks,<br>
-	  		<span>The Penrose Team</span>
-	  	</p>
-	  	<div class="details-block">
-	  		<h2>Payment Details</h2>
-	  		<p class="payment-details">
-	  			Please make payments by bank transfer to:<br>
-	  			HSBC, sort code 12-34-56, account number 12345678<br>
-	  			International payments: iban GB12ABCD12345678909876, swift ABCDGB12<br>
-	  			Please quote invoice number as the payment reference.<br>
-	  		</p>
-	  		<p class="company-details">
-	  			Penrose is a trading name of Penrose Studio Ltd.<br>
-	  			Registered office: 1 Parade Chambers, North Lane,<br> Leeds, LS6 3HW, United Kingdom.
-	  		</p>
-	  		<p class="company-number">
-	  			<span>Company number: </span>06947690<br>
-	  			<span>Registered VAT number: </span>973 3258 01
-	  		</p>
-	  	</div>
-	  	<div class="border-edge"></div>
   	</div>
     <script src="javascripts/main.js"></script>
   </body>
