adds document page and styles

--- a/src/document-cover.html
+++ b/src/document-cover.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Invoice</title>
+    <title>Document Cover</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
